--- a/Developer/ProgrammingGuide/paper.tex
+++ b/Developer/ProgrammingGuide/paper.tex
@@ -27,7 +27,7 @@ Equalizer\\Programming and User Guide}
       {\Large The official reference for developing and
         deploying parallel, scalable OpenGL\texttrademark\ applications using
         the Equalizer parallel rendering framework}\\\vspace{1cm}
-      Version 1.11.2 for Equalizer 1.4-beta\\[\medskipamount]
+      Version 1.11.3 for Equalizer 1.4-beta\\[\medskipamount]
   \today
 }
 
@@ -133,6 +133,7 @@ Subpixel (FSAA) [top left], DPlex [middle left], Pixel [middle center],
     1.10    & Feb 17, 2012 & Revision for Equalizer 1.2\\
     1.11.1  & Apr 10, 2012 & Minor revision\\
     1.11.2  & Jun 25, 2012 & Added \sref{sScaling} and \sref{sROI}\\
+    1.11.3  & Jun 26, 2012 & Update \aref{aFileFormat}\\
     \hline
   \end{tabularx}}
 \clearpage
